order refactor done cache done manage menu done

--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -30,6 +30,7 @@
 				<li id="3"><a href="/contract">契約</a></li>
 				<li id="4"><a href="/order">注文</a></li>
 				<li id="5"><a href="/tax">消費税</a></li>
+				<li id="6"><a href="/manage">管理</a></li>
 			</ul>
 		</div>
 		</div>
@@ -50,6 +51,7 @@
 		if(i=='3') {$('#3').attr('class','active');}
 		if(i=='4') {$('#4').attr('class','active');}
 		if(i=='5') {$('#5').attr('class','active');}
+		if(i=='6') {$('#6').attr('class','active');}
 	</script>
 	<script type="text/javascript">
 	$(function(){
